--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -11,19 +11,41 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
+  pod 'CapacitorCommunityFcm', :path => '../../node_modules/@capacitor-community/fcm'
   pod 'CapacitorCommunityFileOpener', :path => '../../node_modules/@capacitor-community/file-opener'
   pod 'CapacitorApp', :path => '../../node_modules/@capacitor/app'
+  pod 'CapacitorFileViewer', :path => '../../node_modules/@capacitor/file-viewer'
   pod 'CapacitorFilesystem', :path => '../../node_modules/@capacitor/filesystem'
   pod 'CapacitorHaptics', :path => '../../node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
+  pod 'CapacitorPushNotifications', :path => '../../node_modules/@capacitor/push-notifications'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
 end
 
 target 'App' do
   capacitor_pods
+   # Firebase SDK compatible avec Xcode 15.2
+   pod 'Firebase/Core', '~> 10.25.0'
+   pod 'Firebase/Messaging', '~> 10.25.0'
   # Add your Pods here
 end
 
 post_install do |installer|
   assertDeploymentTarget(installer)
+
+  # Configuration pour Xcode 15.2
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      # Résoudre les problèmes de compilation avec Xcode 15.2
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << 'SWIFT_VERSION=5.0'
+
+      # Résoudre les erreurs Swift avec Firebase
+      if target.name == 'FirebaseCoreInternal'
+        config.build_settings['SWIFT_COMPILATION_MODE'] = 'wholemodule'
+        config.build_settings['SWIFT_OPTIMIZATION_LEVEL'] = '-Onone'
+      end
+    end
+  end
 end
