--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@capacitor-community/fcm": "^7.1.3",
     "@capacitor-community/file-opener": "^7.0.1",
     "@capacitor/android": "7.4.4",
     "@capacitor/app": "7.1.0",
     "@capacitor/core": "^7.4.4",
+    "@capacitor/file-viewer": "^1.0.5",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "7.4.4",
     "@capacitor/keyboard": "7.0.3",
+    "@capacitor/push-notifications": "^7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
